<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp">


    <androidx.cardview.widget.CardView
        android:id="@+id/listCard"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/type_view"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:background="#2F9A33"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/transaction_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/item"
                android:textColor="@android:color/black"
                android:textSize="16sp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/transaction_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"

                android:text="@string/_27_august_2021"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/transaction_name"
                app:layout_constraintTop_toBottomOf="@+id/transaction_name"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/transaction_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:text="@string/cash"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/transaction_date"
                app:layout_constraintStart_toEndOf="@+id/transaction_date"
                app:layout_constraintTop_toTopOf="@+id/transaction_date"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/transaction_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_300"

                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.644"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:text="@string/sqsx"
                android:textColor="@color/black"
                android:textSize="32sp"
                app:layout_constraintEnd_toStartOf="@+id/transaction_mode"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/plus_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="1dp"
                android:text="@string/mo"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/transaction_amount"
                app:layout_constraintEnd_toStartOf="@+id/transaction_amount"
                app:layout_constraintTop_toTopOf="@+id/transaction_amount" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginStart="6dp"
                android:background="@drawable/ic_baseline_arrow_right"
                android:textSize="32sp"
                app:layout_constraintBottom_toBottomOf="@+id/transaction_amount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.714"
                app:layout_constraintStart_toEndOf="@+id/transaction_amount"
                app:layout_constraintTop_toTopOf="@+id/transaction_amount"
                app:layout_constraintVertical_bias="0.6" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
