<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rgrgfvf"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_light">


    <ImageView
        android:id="@+id/useless"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="104dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/button_sign_in"
        android:layout_width="150dp"
        android:layout_height="52dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/useless"
        app:layout_constraintVertical_bias="0.216" />

    <Button
        android:id="@+id/buttonuseless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/white"
        android:text="@string/sign_in_by_email"
        android:textColor="#A19A9A"
        app:layout_constraintEnd_toEndOf="@+id/button_sign_in"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toStartOf="@+id/button_sign_in"
        app:layout_constraintTop_toBottomOf="@+id/button_sign_in"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/guest_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_as_guest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonuseless"
        app:layout_constraintVertical_bias="0.264"
        tools:ignore="TextContrastCheck,TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>