<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/DFDFD"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_light"
    >


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/bfbfbfrr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/addAppBar2id"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:menu="@menu/profile_edit"
            app:title="Expense Manager" />

    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        android:id="@+id/befdhth"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dbndtbhdb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_savedid"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="25dp"
                android:hint="@string/user_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bdfbtbh">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nthrdtb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/budget_savedid"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="25dp"
                android:hint="@string/monthly_budget"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_savedid">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nrbhrbf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/income_savedid"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="25dp"
                android:hint="@string/income"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/budget_savedid">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nsfgvvfgre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/bdfbtbh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="116dp"
                android:layout_marginEnd="32dp"
                android:gravity="center"
                android:text="@string/your_budget"
                android:textColor="@color/black"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/saveButtonid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="104dp"
                android:backgroundTint="#C59F18"
                android:text="@string/save"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TextContrastCheck" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</FrameLayout>